package com.tkr.tkrtpushop.Prevalent;

import com.tkr.tkrtpushop.Model.Users;

public class Prevalent {

    public static Users currentOnlineUser = new Users();

    public static final String UserPhoneKey = "UserPhone";
    public static final String UserPasswordKey = "UserPassword";
}